<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>qbot_nav</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="rafiabdul7128@gmail.com">abdul-rafi</maintainer>
  <license>Apache-2.0</license>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
  
  <exec_depend>rclpy</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>interfaces</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
</package>
